# insert-license-usage

./: mise.toml  pyproject.toml
insert_license_usage/: insert_incense_usage.py
memo/: check.org
